--- a/package.json
+++ b/package.json
@@ -13,16 +13,36 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@goat-sdk/adapter-langchain": "^0.2.12",
+    "@goat-sdk/adapter-vercel-ai": "^0.2.10",
+    "@goat-sdk/plugin-0x": "^0.1.10",
+    "@goat-sdk/plugin-coingecko": "^0.2.10",
+    "@goat-sdk/plugin-ens": "^0.1.4",
+    "@goat-sdk/plugin-erc20": "^0.2.14",
+    "@goat-sdk/plugin-ionic": "^0.1.6",
+    "@goat-sdk/plugin-kim": "^0.1.13",
+    "@goat-sdk/plugin-uniswap": "^0.2.15",
+    "@goat-sdk/wallet-viem": "^0.2.12",
+    "@goat-sdk/core": "^0.4.9",
+    "zod": "^3.24.4",
+    "@reown/appkit-siwe": "^1.7.4",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "ethers": "^5.7.2",
     "express": "^5.1.0",
     "neo4j-driver": "^5.28.1",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "viem": "2.23.4",
+    "zod-to-json-schema": "^3.24.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.18"
   }
 }
