--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@goat-sdk/adapter-langchain": "^0.2.12",
     "@goat-sdk/adapter-vercel-ai": "^0.2.10",
+    "@goat-sdk/core": "^0.4.9",
     "@goat-sdk/plugin-0x": "^0.1.10",
     "@goat-sdk/plugin-coingecko": "^0.2.10",
     "@goat-sdk/plugin-ens": "^0.1.4",
@@ -23,13 +24,12 @@
     "@goat-sdk/plugin-kim": "^0.1.13",
     "@goat-sdk/plugin-uniswap": "^0.2.15",
     "@goat-sdk/wallet-viem": "^0.2.12",
-    "@goat-sdk/core": "^0.4.9",
-    "zod": "^3.24.4",
     "@reown/appkit-siwe": "^1.7.4",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "axios": "^1.9.0",
+    "brave-goat": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ethers": "^5.7.2",
@@ -37,9 +37,11 @@
     "neo4j-driver": "^5.28.1",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
+    "sage-soneium": "^1.1.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "viem": "2.23.4",
+    "zod": "^3.24.4",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
