--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "strictPropertyInitialization": false,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "target": "ES2020",                       /* Specify ECMAScript target version */
+    "module": "NodeNext",                     /* Specify module code generation */
+    "lib": ["ES2020"],                        /* Specify library files to be included in the compilation */
+    "outDir": "./dist",                       /* Redirect output structure to the directory */
+    "rootDir": "./src",                       /* Specify the root directory of input files */
+    "sourceMap": true,                        /* Generates corresponding '.map' file */
+    
+    /* Strict Type-Checking Options */
+    "strict": true,                           /* Enable all strict type-checking options */
+    "noImplicitAny": true,                    /* Raise error on expressions and declarations with an implied 'any' type */
+    "strictNullChecks": true,                 /* Enable strict null checks */
+    
+    /* Module Resolution Options */
+    "moduleResolution": "NodeNext",           /* Specify module resolution strategy */
+    "baseUrl": "./",                          /* Base directory to resolve non-absolute module names */
+    "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules */
+    "resolveJsonModule": true,                /* Include modules imported with .json extension */
+    
+    /* Experimental Options */
+    "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators */
+    "emitDecoratorMetadata": true,            /* Enables experimental support for emitting type metadata for decorators */
+    
+    /* Advanced Options */
+    "skipLibCheck": true,                     /* Skip type checking of declaration files */
+    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file */
+  
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
