--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file */
   
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
